--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,19 +3,15 @@ name: Github Pages Deploy
 on:
   push:
     branches:
-      - 'main'
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [15.x]
-
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2.3.1
 
       - name: Install & Build
         uses: npm install && npm run build
